fixed scrollbar issue on smaller resolutions

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,12 @@
 
 /* Size of leaflet map container */
 .leaflet-container {
-  height: 100vh;
+  height: 100%;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 #root {
@@ -67,13 +72,11 @@
 }
 
 #map-pane {
-  height: 100%;
+  min-height: 100%;
   width: 60%;
 }
 
-
-
-#visual-box{
+#visual-box {
   display: flex;
-  flex-flow:column;
+  flex-flow: column;
 }
